# hardware-re-agent

./: IDEA.md  LICENSE  README.md  pyproject.toml
src/hardware_re_agent/: __init__.py  cli.py  malware_engine.py
tests/: test_malware_engine.py
