[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardware-re-agent"
version = "0.1.0"
description = "The agent that autonomously decompiles and explains malware"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "malware-analysis",
    "reverse-engineering",
    "security",
    "ghidra",
    "disassembly",
    "binary-analysis",
    "cybersecurity",
    "decompiler"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/hardware-re-agent"
Documentation = "https://github.com/avasis-ai/hardware-re-agent#readme"
Repository = "https://github.com/avasis-ai/hardware-re-agent.git"
Issues = "https://github.com/avasis-ai/hardware-re-agent/issues"

[project.scripts]
hardware-re = "hardware_re_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_re_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
